--- a/config/content.htm
+++ b/config/content.htm
@@ -1,11 +1,5 @@
 <h1>About</h1>
-<p>
-<a href="https://github.com/mdecycu/cmsite">
-  https://github.com/mdecycu/cmsite
- </a>
-</p>
-<p>
-</p>
+<p>倉儲:<a href="https://github.com/41023245/cad2023">https://github.com/41023245/cad2023</a></p>
 <h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
