--- a/content/index.html
+++ b/content/index.html
@@ -68,6 +68,7 @@
 <script type="text/javascript" src="./../cmsimde/static/syntaxhighlighter/shBrushPhp.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/syntaxhighlighter/shBrushPowerShell.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/syntaxhighlighter/shBrushLua.js"></script>
+<script type="text/javascript" src="./../cmsimde/static/syntaxhighlighter/shBrushMojo.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/syntaxhighlighter/shBrushCpp.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/syntaxhighlighter/shBrushCss.js"></script>
 <script type="text/javascript" src="./../cmsimde/static/syntaxhighlighter/shBrushCSharp.js"></script>
@@ -141,13 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <a href='Brython.html'>Next</a> >> Brython<br /><h1>About</h1>
-<p>
-<a href="https://github.com/mdecycu/cmsite">
-  https://github.com/mdecycu/cmsite
- </a>
-</p>
-<p>
-</p>
+<p>倉儲:<a href="https://github.com/41023245/cad2023">https://github.com/41023245/cad2023</a></p>
 <br /> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
